@@ -1,19 +1,19 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/misc.R
+% Please edit documentation in R/geod.R
 \name{geodXyInverse}
 \alias{geodXyInverse}
 \title{inverse geodesic calculation}
 \usage{
-geodXyInverse(x, y, lon.ref = 0, lat.ref = 0)
+geodXyInverse(x, y, longitudeRef = 0, latitudeRef = 0)
 }
 \arguments{
 \item{x}{value of x in metres, as given by \code{\link{geodXy}}}
 
 \item{y}{value of y in metres, as given by \code{\link{geodXy}}}
 
-\item{lon.ref}{reference longitude, as supplied to \code{\link{geodXy}}}
+\item{longitudeRef}{reference longitude, as supplied to \code{\link{geodXy}}}
 
-\item{lat.ref}{reference latitude, as supplied to \code{\link{geodXy}}}
+\item{latitudeRef}{reference latitude, as supplied to \code{\link{geodXy}}}
 }
 \value{
 a data frame containing \code{longitude} and \code{latitude}
